add books route to further understand the abilities of tsoa and open api validator - gi
