# src/generated/swagger.json
@@ -6,21 +6,63 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"UserCredentials": {
+			"BookStatus": {
+				"type": "string",
+				"enum": [
+					"New",
+					"Used",
+					"Out Of Stock"
+				]
+			},
+			"Book": {
 				"properties": {
-					"userName": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"author": {
 						"type": "string"
 					},
-					"password": {
+					"title": {
+						"type": "string"
+					},
+					"status": {
+						"$ref": "#/components/schemas/BookStatus"
+					},
+					"description": {
 						"type": "string"
 					}
 				},
 				"required": [
-					"userName",
-					"password"
+					"id",
+					"author",
+					"title",
+					"status"
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"Partial_Book_": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"author": {
+						"type": "string"
+					},
+					"title": {
+						"type": "string"
+					},
+					"status": {
+						"$ref": "#/components/schemas/BookStatus"
+					},
+					"description": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
 			}
 		},
 		"securitySchemes": {}
@@ -38,6 +80,111 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/books": {
+			"post": {
+				"operationId": "PostBook",
+				"responses": {
+					"201": {
+						"description": "Created",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Adds a book",
+				"tags": [
+					"Books"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Book"
+							}
+						}
+					}
+				}
+			},
+			"get": {
+				"operationId": "GetBooks",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "page_size",
+						"required": true,
+						"schema": {
+							"format": "int32",
+							"type": "integer",
+							"minimum": 1
+						}
+					},
+					{
+						"in": "query",
+						"name": "page_number",
+						"required": false,
+						"schema": {
+							"format": "int32",
+							"type": "integer",
+							"minimum": 1
+						}
+					}
+				]
+			}
+		},
+		"/books/{bookId}": {
+			"put": {
+				"operationId": "PutBook",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Updates one or more book properties",
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "bookId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Partial_Book_"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/health/readiness": {
 			"get": {
 				"operationId": "GetReadiness",
@@ -70,34 +217,6 @@
 				},
 				"security": [],
 				"parameters": []
-			}
-		},
-		"/login": {
-			"post": {
-				"operationId": "PostLogin",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
-					}
-				},
-				"description": "Validates credentials for a user.\nReturns a bearer token for use in protected API calls.",
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/UserCredentials"
-							}
-						}
-					}
-				}
 			}
 		}
 	},
